<resources>
    <string name="app_name">PokerHud</string>
    <!-- Buttons Text -->
    <string name="button_game">Go to HUD</string>
    <string name="button_result">Play history</string>
    <string name="button_reset">RESET</string>
    <string name="button_next">NEXT</string>
    <string name="button_logout">Log out</string>
    <string name="button_submit">Submit</string>

    <!-- Toggle buttons Text -->
    <string name="toggle_call">Call</string>
    <string name="toggle_raise">Raise</string>

    <!-- Tab buttons Text -->
    <string name="text_tab_hud">HUD</string>
    <string name="text_tab_result">RESLUT</string>
    <string name="text_tab_ranking">RANKING</string>
    <string name="text_tab_conf">CONFIG</string>

    <!-- Normal Text -->
    <string name="text_topmenu">Select menu!!!!</string>
    <string name="text_hand">HANDS : </string>
    <string name="text_facebooklogin">Login with Facebook</string>
    <string name="text_result">Your Total Status</string>
    <string name="text_seatnumber">Seat : </string>
    <string name="text_playedhand">Played Hands : </string>
    <string name="text_vpip">VPIP : </string>
    <string name="text_pfr">PFR : </string>
    <string name="text_blindsteal">BlindSteal : </string>
    <string name="text_3bet">Info : </string>
    <string name="text_ranking">RANKING</string>
    <string name="text_conf">Configuration of Application</string>
    <string name="text_date">DATE</string>

    <!-- Conf text-->
    <string name="text_conf_players">How many players?</string>
    <string name="text_conf_dis">-</string>
    <string name="text_conf_seat">seat</string>
    <string name="text_conf_add">+</string>
    <string name="text_conf_you">Where are you?</string>
    <string name="text_conf_button">Where is Button?</string>

    <!-- Sign up text -->
    <string name="singup_intro1">Hi!  </string>
    <string name="singup_intro2">Welcome to Poker HUD Application\nWould you sign up our service please.</string>
    <string name="singup_playername">What you\'er player name?\n(alphabet and numbers only)</string>

    <!-- Facebook -->
    <string name="facebook_app_id">238224876690058</string>
    <string name="fb_login_protocol_scheme">fb238224876690058</string>
    <string name="text_preparelogo">なんかロゴか何か</string>
    <string name="text_defaultPlayer">9</string>
    <string name="text_defaultPosition">1</string>
    <string name="text_logout">Do you want to logoff from service?</string>
    <string name="button_logof">Logout</string>
    <string name="text_title">REAL HUD TRACKER</string>


</resources>
