<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="club.bluegem.pokerhud.FragmentHudController"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/hudtagmenu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <TextView
            android:id="@+id/textbutton_hud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_tab_hud"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/textbutton_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_tab_result"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/textbutton_ranking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_tab_ranking"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/textbutton_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_tab_conf"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/fragmenthudadapter"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="50dp">
    </RelativeLayout>
</RelativeLayout>