<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="hand"
            type="club.bluegem.pokerhud.Hand" />
    </data>
<LinearLayout
    android:id="@+id/layout_game"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="club.bluegem.pokerhud.FragmentHud"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="1">
        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_reset" />

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/text_hand" />
        <TextView
            android:id="@+id/text_handcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@{String.valueOf(hand.handCount)}" />
        <Button
            android:id="@+id/button_nexthand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_next" />
        </LinearLayout>

    <ListView
        android:id="@+id/PlayerList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
</layout>