<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="result"
            type="club.bluegem.pokerhud.ResultHolder" />
    </data>
<LinearLayout
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="65dp">

    <!-- Player seat and activate -->
    <LinearLayout
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_date" />
            <TextView
            android:id="@+id/text_playerposition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(result.date)}" />
        </LinearLayout>
    </LinearLayout>

    <!-- Player's data section-->
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal">
        <!-- 1st row, Total hands and called hands rate -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_playedhand" />
            <TextView
            android:id="@+id/text_palyedcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(result.playedHandCount)}" />
        </LinearLayout>
        <!-- 2nd row, VPIP and PFR -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_vpip" />
            <TextView
                android:id="@+id/text_vpip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.format(`%.2f`,result.vpipCalculation)}"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pfr"
                android:layout_marginStart="5dp"/>
            <TextView
                android:id="@+id/text_pfr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.format(`%.2f`,result.pfrCalculation)}"
                />
            </LinearLayout>

        <!-- 3rd row, Blind Steall and something -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_blindsteal" />
            <TextView
                android:id="@+id/text_blindsteal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.format(`%.2f`,result.blindstealCalculation)}"
                android:layout_marginEnd="5dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</layout>